--- a/index.html
+++ b/index.html
@@ -181,13 +181,12 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/teaser.mp4"
+        <source src="./static/videos/teaser_realdata.mp4"
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
-        free-viewpoint
-        portraits.
+        <span class="dnerf">Visual comparison of depth estimation under different exposure strategies.</span>
+        Images and disparity maps captured using AverageAE (a, c) and ADEC (b, d), with LiDAR ground truth shown in (e).
       </h2>
     </div>
   </div>
