--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
         <div class="columns is-centered">
           <div class="column content">
             <p>
-              As a byproduct of our method, we can also solve the matting problem by ignoring
-              samples that fall outside of a bounding box during rendering.
+              Real-world stereo-LiDAR dataset captured across diverse scenes.
+              Includes tone-mapped stereo images and sparse LiDAR ground-truth, recorded with a calibrated mobile camera system.
             </p>
             <video id="matting-video" controls playsinline height="100%">
-              <source src="./static/videos/matting.mp4"
+              <source src="./static/videos/real_dataset_samples.mp4"
                       type="video/mp4">
             </video>
           </div>
