Insert real_dataset_videos.mp4

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             Synthetic HDR stereo dataset generated using the CARLA simulator.
             The video shows a sequence of left images and corresponding ground-truth depth maps.
           </p>
-          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+          <video id="synthetic_dataset" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/synthetic_dataset_samples.mp4"
                     type="video/mp4">
           </video>
@@ -328,7 +328,7 @@
               Real-world stereo-LiDAR dataset captured across diverse scenes.
               Includes tone-mapped stereo images and sparse LiDAR ground-truth, recorded with a calibrated mobile camera system.
             </p>
-            <video id="matting-video" controls playsinline height="100%">
+            <video id="real_dataset" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/real_dataset_samples.mp4"
                       type="video/mp4">
             </video>
