--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <h2 class="title is-3">Related Links</h2>
 
         <div class="content has-text-justified">
-          <p>
+          <!-- <p>
             There's a lot of excellent work that was introduced around the same time as ours.
           </p>
           <p>
@@ -430,7 +430,7 @@
           </p>
           <p>
             There are probably many more by the time you are reading this. Check out <a href="https://dellaert.github.io/NeRF/">Frank Dellart's survey on recent NeRF papers</a>, and <a href="https://github.com/yenchenlin/awesome-NeRF">Yen-Chen Lin's curated list of NeRF papers</a>.
-          </p>
+          </p> -->
         </div>
       </div>
     </div>
@@ -444,10 +444,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+  author    = {Juhyung Choi, Jinnyeong Kim, Jinwoo Lee, Samuel Brucker, Mario Bijelic, Felix Heide, Seung-Hwan Baek},
+  title     = {Dual Exposure Stereo for Extended Dynamic Range 3D Imaging},
+  journal   = {CVPR},
+  year      = {2025},
 }</code></pre>
   </div>
 </section>
