--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
+    <pre><code>@article{choi2025dual,
   author    = {Juhyung Choi, Jinnyeong Kim, Jinwoo Lee, Samuel Brucker, Mario Bijelic, Felix Heide, Seung-Hwan Baek},
   title     = {Dual Exposure Stereo for Extended Dynamic Range 3D Imaging},
   journal   = {CVPR},
