--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon" href="./static/images/favicon.svg">
+  <!-- <link rel="icon" href="./static/images/favicon.svg"> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script defer src="./static/js/fontawesome.all.min.js"></script>
@@ -91,23 +91,23 @@
           <h1 class="title is-1 publication-title">Dual Exposure Stereo for Extended Dynamic Range 3D Imaging</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Juhyung Choi</a><sup>1</sup>,</span>
+              <a href="">Juhyung Choi</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://utkarshsinha.com">Jinnyeong Kim</a><sup>1</sup>,</span>
+              <a href="">Jinnyeong Kim</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Jinwoo Lee</a><sup>2</sup>,
+              <a href="">Jinwoo Lee</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="http://sofienbouaziz.com">Samuel Brucker</a><sup>3</sup>,
+              <a href="">Samuel Brucker</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.danbgoldman.com">Mario Bijelic</a><sup>4</sup>,
+              <a href="http://mariobijelic.de/wordpress/">Mario Bijelic</a><sup>4</sup>,
             </span>
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Felix Heide</a><sup>4</sup>,
+              <a href="https://www.cs.princeton.edu/~fheide/">Felix Heide</a><sup>4</sup>,
             </span>
             <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Seung-Hwan Baek</a><sup>1</sup>
+              <a href="https://sites.google.com/view/shbaek/">Seung-Hwan Baek</a><sup>1</sup>
             </span>
           </div>
 
