--- a/download.html
+++ b/download.html
@@ -7,9 +7,10 @@
 <body>
   <h1>📦 Dataset Downloads</h1>
   <ul>
-    <li><a href="https://drive.google.com/file/d/xxxxx/view?usp=sharing" target="_blank">📁 Part 1 - Indoor Scenes</a></li>
-    <li><a href="https://drive.google.com/file/d/yyyyy/view?usp=sharing" target="_blank">📁 Part 2 - Outdoor Scenes</a></li>
-    <li><a href="https://drive.google.com/file/d/zzzzz/view?usp=sharing" target="_blank">📁 Part 3 - Nighttime Scenes</a></li>
+    <li><a href="https://drive.google.com/drive/folders/1KnIhRhA3uLKfZd_iEQ-afaxiJgszxS8v?usp=sharing" target="_blank">📁 CARLA training dataset1 - Resolution 600x800</a></li>
+    <li><a href="https://drive.google.com/drive/folders/1PQ4-P-CSDtGWDoo7kzKQKwp_XCXRd56S?usp=sharing" target="_blank">📁 CARLA training dataset2 - Resolution 1280x384</a></li>
+    <li><a href="https://drive.google.com/drive/folders/1ZxY78U63vagr1h-kMWn1ipwzWNRDZeGh?usp=sharing" target="_blank">📁 CARLA test dataset1 - Resolution 600x800</a></li>
+    <li><a href="https://drive.google.com/drive/folders/1FiP7TrU7XIN7TRtX4Qm_GMNn4SiKsXtu?usp=sharing" target="_blank">📁 CARLA test dataset2 - Resolution 1280x384</a></li>
   </ul>
 </body>
 </html>
