--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://drive.google.com/drive/folders/1PQ4-P-CSDtGWDoo7kzKQKwp_XCXRd56S"
+                <a href="https://juhyc.github.io/ADEC/download.html"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
